adicionado filtro de sql's (#6)